Removed overflow:hidden bug dropdown

--- a/source/stylesheets/blocks/_box.scss
+++ b/source/stylesheets/blocks/_box.scss
@@ -9,7 +9,6 @@
 	background: white;
 	border: 1px solid $this--border-color;
 	border-radius: $this--border-radius;
-	overflow: hidden;
 	max-width: 940px;
 	margin-left: auto;
 	margin-right: auto;
